--- a/packages/web/app/(landing)/views/roadmap/roadmap-container.module.scss
+++ b/packages/web/app/(landing)/views/roadmap/roadmap-container.module.scss
@@ -1,6 +1,7 @@
 @import "../../../screen.scss";
 
 .roadmapContainer {
+    padding-top: var(--margin-800);
     padding-bottom: var(--margin-1000);
 }
 
